--- a/notebook/CGR_Seq_Self_v1.ipynb
+++ b/notebook/CGR_Seq_Self_v1.ipynb
@@ -22,7 +22,9 @@
     "from collections import defaultdict\n",
     "import matplotlib.pyplot as plt\n",
     "from Bio import SeqIO\n",
-    "\n",
+    "import os\n",
+    "os.chdir('../')\n",
+    "os.chdir(os.getcwd()+'/data')\n",
     "\n",
     "\n",
     "# defining cgr graph\n",
