--- a/notebook/CGR_Seq.ipynb
+++ b/notebook/CGR_Seq.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,9 @@
     "    c = None\n",
     "    h = \"\"\n",
     "    Data = \"\"\n",
+    "    i = 0\n",
+    "    def __init__(self,a):\n",
+    "        self.i=a\n",
     "    def read_fasta(self,loc):\n",
     "        f = open(loc)\n",
     "        s1 = f.read()\n",
@@ -90,24 +93,25 @@
     "        pylab.figure(figsize=(12,12))\n",
     "        pylab.title('CGR of '+str(self.K)+'-mers for '+self.h[2:])\n",
     "        pylab.imshow(self.c, cmap=cm.gray_r)\n",
+    "        pylab.savefig(str(self.i)+\".PNG\")\n",
     "        pylab.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "B = CGR()\n",
+    "B = CGR(1)\n",
     "cg = B.load_fasta(\"seq_1.fasta\",7)\n",
-    "C = CGR()\n",
+    "C = CGR(2)\n",
     "cg_1 = C.load_fasta(\"seq_2.fasta\",7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -124,12 +128,12 @@
     }
    ],
    "source": [
-    "B.show()"
+    "x = B.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -151,18 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(128, 128)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-50-543a152629a1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
     }
    ],
    "source": [
@@ -171,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,8 +484,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 61,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -531,6 +538,103 @@
     "sum/=len(data_1)\n",
     "print(sum)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "from skimage.metrics import structural_similarity as ssim\n",
+    "imageA = cv2.imread(\"first.PNG\")\n",
+    "imageB = cv2.imread(\"2.PNG\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grayA = cv2.cvtColor(imageA, cv2.COLOR_BGR2GRAY)\n",
+    "grayB = cv2.cvtColor(imageB, cv2.COLOR_BGR2GRAY)\n",
+    "(score,_) = ssim(grayA, grayB, full=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.975703881610875"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting SSIM-PIL\n",
+      "  Downloading SSIM_PIL-1.0.12-py3-none-any.whl (8.4 kB)\n",
+      "Installing collected packages: SSIM-PIL\n",
+      "Successfully installed SSIM-PIL-1.0.12\n",
+      "\u001b[33mWARNING: You are using pip version 20.3.3; however, version 21.1 is available.\n",
+      "You should consider upgrading via the '/Library/Frameworks/Python.framework/Versions/3.9/bin/python3.9 -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install SSIM-PIL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No module named 'pyopencl'. cl12 version by Christoph Gohlke for windows is recommended: https://www.lfd.uci.edu/~gohlke/pythonlibs/#pyopencl\n",
+      "0.819606435498014\n"
+     ]
+    }
+   ],
+   "source": [
+    "from SSIM_PIL import compare_ssim\n",
+    "from PIL import Image\n",
+    "\n",
+    "image1 = Image.open('F.PNG')\n",
+    "image2 = Image.open('S.PNG')\n",
+    "value = compare_ssim(image1, image2)\n",
+    "print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
