--- a/notebook/CGR_Seq.ipynb
+++ b/notebook/CGR_Seq.ipynb
@@ -495,6 +495,282 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u, s, vh = np.linalg.svd(cg, full_matrices=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(512, 512)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(512, 512)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vh.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12,  3,  3,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,\n",
+       "        2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,\n",
+       "        2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,\n",
+       "        2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,\n",
+       "        2,  2,  2,  2,  2,  2,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
+       "        1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
+       "        1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
+       "        1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
+       "        1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
+       "        1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
+       "        1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
+       "        1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
+       "        1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
+       "        1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
+       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "        0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "        0,  0])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import linalg\n",
+    "U, s, Vh = linalg.svd(cg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(512, 512)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.20037563e+01, 3.07443297e+00, 3.04890536e+00, 2.98658943e+00,\n",
+       "       2.96713928e+00, 2.91909603e+00, 2.89949407e+00, 2.84692706e+00,\n",
+       "       2.83040167e+00, 2.80713710e+00, 2.80081177e+00, 2.77729532e+00,\n",
+       "       2.75783130e+00, 2.73768345e+00, 2.71626582e+00, 2.70602254e+00,\n",
+       "       2.66656877e+00, 2.65868475e+00, 2.63479654e+00, 2.62543620e+00,\n",
+       "       2.60529929e+00, 2.58710388e+00, 2.58580525e+00, 2.54867162e+00,\n",
+       "       2.53848547e+00, 2.51628673e+00, 2.51550411e+00, 2.49508612e+00,\n",
+       "       2.47770041e+00, 2.46589216e+00, 2.45115062e+00, 2.44066540e+00,\n",
+       "       2.42894586e+00, 2.41876810e+00, 2.40342042e+00, 2.38695182e+00,\n",
+       "       2.37971011e+00, 2.37462891e+00, 2.36497710e+00, 2.33842902e+00,\n",
+       "       2.33657045e+00, 2.32683068e+00, 2.32034255e+00, 2.30461391e+00,\n",
+       "       2.28902225e+00, 2.28180753e+00, 2.27253204e+00, 2.26676594e+00,\n",
+       "       2.25347737e+00, 2.24397503e+00, 2.22568825e+00, 2.21914651e+00,\n",
+       "       2.20579574e+00, 2.19017984e+00, 2.18467687e+00, 2.17666826e+00,\n",
+       "       2.15923814e+00, 2.15208517e+00, 2.14565268e+00, 2.13616791e+00,\n",
+       "       2.12820200e+00, 2.12148314e+00, 2.11194427e+00, 2.09559319e+00,\n",
+       "       2.09133337e+00, 2.08074050e+00, 2.07507075e+00, 2.06665085e+00,\n",
+       "       2.05586130e+00, 2.04781800e+00, 2.03683882e+00, 2.03374130e+00,\n",
+       "       2.01662541e+00, 2.00816892e+00, 1.99505209e+00, 1.99452403e+00,\n",
+       "       1.98815587e+00, 1.96870968e+00, 1.96500412e+00, 1.95240430e+00,\n",
+       "       1.94126190e+00, 1.93980687e+00, 1.93112477e+00, 1.92267179e+00,\n",
+       "       1.91708852e+00, 1.91429158e+00, 1.90397108e+00, 1.89303521e+00,\n",
+       "       1.88540168e+00, 1.87191552e+00, 1.86873514e+00, 1.86444800e+00,\n",
+       "       1.85613731e+00, 1.85133401e+00, 1.83959719e+00, 1.83356475e+00,\n",
+       "       1.82405208e+00, 1.81836416e+00, 1.80419541e+00, 1.79115379e+00,\n",
+       "       1.78676632e+00, 1.78509412e+00, 1.77954964e+00, 1.77613875e+00,\n",
+       "       1.76630482e+00, 1.75496247e+00, 1.75139552e+00, 1.74385255e+00,\n",
+       "       1.74253788e+00, 1.73011339e+00, 1.71495421e+00, 1.70650997e+00,\n",
+       "       1.70093542e+00, 1.69383117e+00, 1.68652909e+00, 1.67492629e+00,\n",
+       "       1.67349843e+00, 1.66954282e+00, 1.66429666e+00, 1.65363212e+00,\n",
+       "       1.64887964e+00, 1.64022454e+00, 1.63057169e+00, 1.62433102e+00,\n",
+       "       1.61534678e+00, 1.60716448e+00, 1.60024642e+00, 1.59524594e+00,\n",
+       "       1.58888684e+00, 1.58609511e+00, 1.57976833e+00, 1.56750160e+00,\n",
+       "       1.56697636e+00, 1.56076712e+00, 1.55531829e+00, 1.54599931e+00,\n",
+       "       1.53984070e+00, 1.53691618e+00, 1.53219652e+00, 1.51515396e+00,\n",
+       "       1.51209031e+00, 1.50942486e+00, 1.50340347e+00, 1.49164207e+00,\n",
+       "       1.48766852e+00, 1.47954039e+00, 1.47388221e+00, 1.47332444e+00,\n",
+       "       1.45948554e+00, 1.45603247e+00, 1.44664507e+00, 1.44227059e+00,\n",
+       "       1.43457069e+00, 1.43038341e+00, 1.42631646e+00, 1.41788052e+00,\n",
+       "       1.41521819e+00, 1.40627999e+00, 1.40231719e+00, 1.39511106e+00,\n",
+       "       1.39092368e+00, 1.38517308e+00, 1.38220935e+00, 1.37572433e+00,\n",
+       "       1.36838305e+00, 1.35778146e+00, 1.35582668e+00, 1.35008316e+00,\n",
+       "       1.34205117e+00, 1.33969491e+00, 1.33537761e+00, 1.32718875e+00,\n",
+       "       1.32232268e+00, 1.31346846e+00, 1.31013445e+00, 1.30900364e+00,\n",
+       "       1.30354721e+00, 1.29595838e+00, 1.29529560e+00, 1.29138040e+00,\n",
+       "       1.28574463e+00, 1.27996555e+00, 1.27726305e+00, 1.26456837e+00,\n",
+       "       1.26073138e+00, 1.25293874e+00, 1.24611252e+00, 1.23862552e+00,\n",
+       "       1.23619683e+00, 1.22687996e+00, 1.22375219e+00, 1.22129024e+00,\n",
+       "       1.21446438e+00, 1.20853203e+00, 1.20783921e+00, 1.20084435e+00,\n",
+       "       1.19781249e+00, 1.19009218e+00, 1.18517181e+00, 1.17884867e+00,\n",
+       "       1.17393483e+00, 1.16943820e+00, 1.16255910e+00, 1.15606092e+00,\n",
+       "       1.15291852e+00, 1.14827371e+00, 1.14808467e+00, 1.14460704e+00,\n",
+       "       1.13508238e+00, 1.12881881e+00, 1.12490312e+00, 1.11752609e+00,\n",
+       "       1.11249866e+00, 1.10963711e+00, 1.10698402e+00, 1.10324322e+00,\n",
+       "       1.09520718e+00, 1.08796955e+00, 1.08505980e+00, 1.08132588e+00,\n",
+       "       1.07699316e+00, 1.07312641e+00, 1.06825836e+00, 1.06165815e+00,\n",
+       "       1.05888130e+00, 1.05502258e+00, 1.04995727e+00, 1.04703800e+00,\n",
+       "       1.03903141e+00, 1.03768509e+00, 1.02949313e+00, 1.02677349e+00,\n",
+       "       1.02291819e+00, 1.01844414e+00, 1.01392218e+00, 1.00770004e+00,\n",
+       "       1.00663689e+00, 1.00413386e+00, 9.99928596e-01, 9.89188984e-01,\n",
+       "       9.80380230e-01, 9.78546557e-01, 9.69773263e-01, 9.64430780e-01,\n",
+       "       9.59106319e-01, 9.57946949e-01, 9.52716213e-01, 9.49972104e-01,\n",
+       "       9.47481803e-01, 9.40699029e-01, 9.35281166e-01, 9.28710200e-01,\n",
+       "       9.26730711e-01, 9.22909124e-01, 9.19286308e-01, 9.12470795e-01,\n",
+       "       9.09242732e-01, 9.07090482e-01, 9.05874418e-01, 8.98804112e-01,\n",
+       "       8.95758395e-01, 8.92859789e-01, 8.85588181e-01, 8.80277440e-01,\n",
+       "       8.74437915e-01, 8.69587149e-01, 8.63891737e-01, 8.60587361e-01,\n",
+       "       8.55358581e-01, 8.50475945e-01, 8.43951309e-01, 8.40092623e-01,\n",
+       "       8.36317100e-01, 8.33674061e-01, 8.32954925e-01, 8.27674835e-01,\n",
+       "       8.23641592e-01, 8.19893632e-01, 8.13527562e-01, 8.08330225e-01,\n",
+       "       8.01942560e-01, 7.99186996e-01, 7.95335323e-01, 7.91995216e-01,\n",
+       "       7.86844962e-01, 7.82276544e-01, 7.76561256e-01, 7.75052195e-01,\n",
+       "       7.70240179e-01, 7.66374173e-01, 7.63528828e-01, 7.57440210e-01,\n",
+       "       7.54212473e-01, 7.51433154e-01, 7.49862389e-01, 7.39787657e-01,\n",
+       "       7.38874540e-01, 7.33246625e-01, 7.28304511e-01, 7.27664071e-01,\n",
+       "       7.23910585e-01, 7.17448925e-01, 7.15651317e-01, 7.10840416e-01,\n",
+       "       7.08121791e-01, 7.03396601e-01, 7.01506507e-01, 7.00954407e-01,\n",
+       "       6.94435105e-01, 6.88022406e-01, 6.87616402e-01, 6.83450719e-01,\n",
+       "       6.80822876e-01, 6.72176673e-01, 6.65821362e-01, 6.65060461e-01,\n",
+       "       6.63429356e-01, 6.56741751e-01, 6.53208506e-01, 6.44696911e-01,\n",
+       "       6.41608829e-01, 6.39308282e-01, 6.35974563e-01, 6.30620477e-01,\n",
+       "       6.25211454e-01, 6.24628548e-01, 6.21046046e-01, 6.19272179e-01,\n",
+       "       6.12837135e-01, 6.10993831e-01, 6.05684041e-01, 6.02720551e-01,\n",
+       "       6.00796698e-01, 5.98902149e-01, 5.92458825e-01, 5.89345496e-01,\n",
+       "       5.84088875e-01, 5.81275771e-01, 5.77182256e-01, 5.67965832e-01,\n",
+       "       5.65262508e-01, 5.56183044e-01, 5.54147603e-01, 5.53172242e-01,\n",
+       "       5.49550344e-01, 5.43862717e-01, 5.40052599e-01, 5.39262978e-01,\n",
+       "       5.34814914e-01, 5.27346920e-01, 5.24548189e-01, 5.22016614e-01,\n",
+       "       5.19673269e-01, 5.11690489e-01, 5.10153666e-01, 5.06466186e-01,\n",
+       "       5.05542955e-01, 5.00074366e-01, 4.94651563e-01, 4.91495820e-01,\n",
+       "       4.89624686e-01, 4.89174631e-01, 4.85691818e-01, 4.78404211e-01,\n",
+       "       4.74184412e-01, 4.71741313e-01, 4.67295210e-01, 4.65245076e-01,\n",
+       "       4.60320477e-01, 4.56816119e-01, 4.53231843e-01, 4.51695086e-01,\n",
+       "       4.49398385e-01, 4.40006023e-01, 4.38136642e-01, 4.34992720e-01,\n",
+       "       4.32179554e-01, 4.29822101e-01, 4.24470779e-01, 4.21156605e-01,\n",
+       "       4.17719337e-01, 4.14313991e-01, 4.11798127e-01, 4.08754805e-01,\n",
+       "       4.05758363e-01, 4.04917175e-01, 3.92212519e-01, 3.91300332e-01,\n",
+       "       3.90198502e-01, 3.88518221e-01, 3.85277161e-01, 3.75372580e-01,\n",
+       "       3.73627614e-01, 3.70682766e-01, 3.67525290e-01, 3.63596466e-01,\n",
+       "       3.62404953e-01, 3.57840129e-01, 3.54374144e-01, 3.49845687e-01,\n",
+       "       3.46260320e-01, 3.42067441e-01, 3.37973273e-01, 3.34423892e-01,\n",
+       "       3.33627957e-01, 3.29107079e-01, 3.24834316e-01, 3.24715214e-01,\n",
+       "       3.16720308e-01, 3.14218626e-01, 3.11502499e-01, 3.11262330e-01,\n",
+       "       3.05271339e-01, 3.03996195e-01, 2.98582747e-01, 2.94514273e-01,\n",
+       "       2.93799756e-01, 2.90422626e-01, 2.83051612e-01, 2.81485045e-01,\n",
+       "       2.80505566e-01, 2.78729518e-01, 2.73723308e-01, 2.70272704e-01,\n",
+       "       2.66566902e-01, 2.65277867e-01, 2.61492583e-01, 2.57376988e-01,\n",
+       "       2.52157938e-01, 2.48745931e-01, 2.48045595e-01, 2.43919300e-01,\n",
+       "       2.42808486e-01, 2.40298894e-01, 2.37707523e-01, 2.33369129e-01,\n",
+       "       2.28070415e-01, 2.27912754e-01, 2.21725410e-01, 2.19703859e-01,\n",
+       "       2.17102147e-01, 2.16183744e-01, 2.11841819e-01, 2.07764849e-01,\n",
+       "       2.06282569e-01, 2.02814456e-01, 2.00111994e-01, 1.98110139e-01,\n",
+       "       1.91997786e-01, 1.87103952e-01, 1.83326737e-01, 1.80631247e-01,\n",
+       "       1.76118712e-01, 1.73416863e-01, 1.70800530e-01, 1.66508681e-01,\n",
+       "       1.63591725e-01, 1.61609515e-01, 1.57276638e-01, 1.55426567e-01,\n",
+       "       1.52437817e-01, 1.49349744e-01, 1.46451748e-01, 1.44459447e-01,\n",
+       "       1.41358982e-01, 1.36574747e-01, 1.34112284e-01, 1.30697067e-01,\n",
+       "       1.28812351e-01, 1.26156995e-01, 1.23998630e-01, 1.19356732e-01,\n",
+       "       1.15595895e-01, 1.13000868e-01, 1.08534523e-01, 1.08156922e-01,\n",
+       "       1.06273835e-01, 1.02811096e-01, 1.01849641e-01, 9.73778027e-02,\n",
+       "       9.17393357e-02, 8.95994689e-02, 8.87472783e-02, 8.59892241e-02,\n",
+       "       8.20616204e-02, 7.60715664e-02, 7.42712531e-02, 7.10184034e-02,\n",
+       "       7.09640809e-02, 6.61498994e-02, 6.24964851e-02, 5.99379017e-02,\n",
+       "       5.92815471e-02, 5.36470616e-02, 5.20805730e-02, 4.73924713e-02,\n",
+       "       4.47516787e-02, 4.37748313e-02, 4.19311256e-02, 4.05822372e-02,\n",
+       "       3.30410834e-02, 3.15287970e-02, 2.82211492e-02, 2.03694858e-02,\n",
+       "       1.88273206e-02, 1.61078928e-02, 1.33447118e-02, 1.06812544e-02,\n",
+       "       9.61769126e-03, 7.34111080e-03, 4.92458919e-03, 7.86788596e-04])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
